# orange-juice

./: .gitignore  LICENSE  README.md
.github/ISSUE_TEMPLATE/: epic.yml  project.yml  story.yml  task.yml
.github/workflows/: add_project_epic_label.yml  backend-test.yml  frontend-test.yml
backend/: .gitignore  Cargo.toml  README.md  config.toml
backend/src/: config.rs  main.rs
frontend/: README.md  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
frontend/app/pages/: connect.vue
frontend/tests/: setup.ts
frontend/tests/e2e/: connect.spec.ts  global-setup.ts
frontend/tests/nuxt/: connect.test.ts
infra/benchy/: Cargo.toml  Dockerfile  README.md
infra/benchy/examples/: hello.c
infra/benchy/src/: main.rs
infra/benchy/test/: input.txt  run.sh
infra/benchy/tests/: tests.rs
infra/benchy/tests/fixtures/: hello.rs  output.txt
